2010-03-16  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Use drag-stuff instead of move-line-up and
	move-line-down.

2010-03-04  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Disable size-indication-mode.
	(program-common-function): Disable hs-minor-mode. cedet instead.
	: Bind right mouse to imenu.

	* lisp/company-0.5/*: Update company from 0.4.3 to 0.5

2010-03-03  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Don't active highlight-sysbol-mode in erc, occur,
	w3m mode.

	* init-site.el: Reset semantic-tag-folding key.

2010-03-02  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add cursor-chg.
	: Add highlight-parentheses.

	* init-site.el: Bind [M-S-f12] to
	semantic-analyze-proto-impl-toggle.
	: Bind "C-c SPC" to semantic-ia-complete-symbol-menu in
	window-system, or semantic-ia-complete-symbol in console.
	: Add (global-ede-mode 1).
	: Enable global-semantic-tag-folding-mode.
	: Set semantic-tag-folding key.

	* init-basic.el (emacs-lisp-mode-hook): Turn off auto-fill-mode in
	emacs-lisp-mode.
	(find-tag): Add advice tags-file-name-advice.
	(x-stretch-cursor): Add (setq x-stretch-cursor t).
	(ring-bell-function): Add (setq ring-bell-function 'ignore).

2010-03-01  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (generic-x): Load generic-x.

2010-02-27  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Open size-indication-mode.
	: Bind C-x C-b to ibuffer.

2010-02-26  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add highlight-tail.

	* lisp/highlight-tail.el: Add.

	* init-site.el: Add pulse setting.

	* init-basic.el (find-dotemacs-file): Add.

2010-02-24  Meteor Liu  <meteor1113@gmail.com>

	* dotemacs.el: Delete.

	* init-misc.el: Format.

	* init-site.el: Format.

	* init-basic.el: Format.

	* init-misc.el: Enable auto-complete-mode in change-log-mode.

	* init-basic.el: Bind (kbd "C-c q") to (auto-fill-mode).
	Trun on auto-fill-mode in change-log-mode.