@@ -1,3 +1,7 @@
+2010-03-17  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-misc.el: Rebind key for recent-jump.
+
 2010-03-16  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-misc.el: Use drag-stuff instead of move-line-up and
